# emod-cli

./: .gitignore  Cargo.toml  README.md
examples/: VARIABLES.md
examples/default/: .gitignore  template.toml  world_behavior_packs.json  world_resource_packs.json
examples/default/behavior_pack/: pack_manifest.json
examples/default/behavior_pack/exampeScripts/modServer/: serverSystem.py
examples/default/behavior_pack/exampleScripts/: modMain.py
examples/default/behavior_pack/exampleScripts/enums/: serverEvents.py
examples/default/behavior_pack/exampleScripts/listen/: listen.py
examples/default/behavior_pack/exampleScripts/modCommon/: emodSystem.py  modConfig.py
examples/default/behavior_pack/exampleScripts/modServer/: emodServerSystem.py  serverSystem.py
examples/default/resource_pack/: pack_manifest.json
src/: config.rs  error.rs  main.rs  template.rs
src/commands/: components.rs  create.rs  mod.rs  release.rs
src/entity/: mod.rs  project.rs
src/utils/: file.rs  git.rs  http.rs  mod.rs
src/utils/file/: mod.rs
src/utils/git/: mod.rs
