[package]
name = "emod-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde_json = "1.0"
zip = "2.2.2"
walkdir = "2"
anyhow = "1.0.97"
