[workspace]
resolver = "2"
members = []

[package]
name = "emod-cli"
version = "0.1.0-dev"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
zip = "2.2.2"
walkdir = "2"
anyhow = "1.0.97"
dirs = "5.0"
regex = "1.10"